--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,56 +30,13 @@
     float: right;
     line-height: 56px;
 
-    .menu-icon {
-        display: none;
-    }
 
     .page-link {
         color: #444;
     }
-
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-        }
+    .page-link {
+        display: block;
+        padding: 5px 10px;
     }
 }
 
@@ -234,7 +191,7 @@
 
 .home a:hover {
     background: #fafafd;
-    outline: 1px solid #dedede;
+    outline:  1px solid #C3D5E4;
 }
 
 .home  a::before {
@@ -253,7 +210,6 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    margin-bottom: 10px;
 }
 
 /**
@@ -298,5 +254,40 @@
     background-color: rgba(181, 181, 181, 0.4);
 }
 
+.site-name {
+    max-width: 940px;
+    padding: 0 10px;
+    margin: 0 auto;
+    text-align: right;
+    position: relative;
+    height: 100%;
+}
+
+.site-name__inner {
+    position: absolute;
+    top: 150px;
+    width: 100%;
+    right: 0;
+    width: 400px;
+}
+
+.site-name__inner .name {
+    font-size: 100px;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.site-name__inner .desc {
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.site-name__inner .btn {
+    padding: 10px 30px;
+    border: 2px solid #fff;
+    display: inline-block;
+    margin-top: 100px;
+    border-radius: 3px;
+    cursor: pointer;
+}
 
 
