home page font change

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -183,7 +183,7 @@
 }
 
 .home  a {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 36px;
     color: #444;
     padding: 10px;
